--- a/index.html
+++ b/index.html
@@ -18,36 +18,15 @@ Licence URI: https://www.os-templates.com/template-terms
 
   <body id="top">
   <!-- Top Background Image Wrapper -->
-  <div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');"> 
+  <div class="bgded overlay" style="background-image:url('images/main_background.jpg');"> 
     <!-- ################################################################################################ -->
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
-        <div class="fl_left"> 
+        <div class="fl_right"> 
           <!-- ################################################################################################ -->
           <ul class="nospace">
             <li><i class="fas fa-phone rgtspace-5"></i> +00 (123) 456 7890</li>
             <li><i class="far fa-envelope rgtspace-5"></i> info@domain.com</li>
-          </ul>
-          <!-- ################################################################################################ -->
-        </div>
-        <div class="fl_right"> 
-          <!-- ################################################################################################ -->
-          <ul class="nospace">
-            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
-            <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
-            <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
-            <li id="searchform">
-              <div>
-                <form action="#" method="post">
-                  <fieldset>
-                    <legend>Quick Search:</legend>
-                    <input type="text" placeholder="Enter search term&hellip;">
-                    <button type="submit"><i class="fas fa-search"></i></button>
-                  </fieldset>
-                </form>
-              </div>
-            </li>
           </ul>
           <!-- ################################################################################################ -->
         </div>
@@ -60,17 +39,22 @@ Licence URI: https://www.os-templates.com/template-terms
       <header id="header" class="hoc clear">
         <div id="logo" class="fl_left"> 
           <!-- ################################################################################################ -->
-          <h1><a href="index.html">Design Web - Automne 2021</a></h1>
+          <h1><a href="index.html">Design Web</a></h1>
           <!-- ################################################################################################ -->
         </div>
         <nav id="mainav" class="fl_right"> 
           <!-- ################################################################################################ -->
           <ul class="clear">
             <li class="active"><a href="index.html">Acceuil</a></li>
+            <li><a class="drop" href="#">Cohortes</a>
+              <ul>
+                <li><a href="resource/Examen1_formatif_Corrige.zip">2021-2022</a></li>
+              </ul>
+            </li>
             <li><a class="drop" href="#">Exercices</a>
-              <!-- <ul>
-                <li><a href="pages/gallery.html">Javascripts - les bases</a></li>
-              </ul> -->
+              <ul>
+                <li><a href="resource/exercices/clockJS/index.html">Exercice 08 - Horloge en Javascripts</a></li>
+              </ul>
             </li>
             <li><a class="drop" href="#">Examens</a>
               <ul>
@@ -111,7 +95,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div id="pageintro" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <article>
-        <h3 class="heading">Finibus dictum lobortis</h3>
+        <h3 class="heading">Multiplex Medusoid Edition</h3>
         <p>Libero sed ullamcorper nibh dignissim et curabitur cursus scelerisque metus sit amet sodales justo auctor sit amet proin quis lacus non nisi.</p>
         <footer>
           <ul class="nospace inline pushright">
