Ajout de l'exercice 09

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <li><a class="drop" href="#">Exercices</a>
               <ul>
                 <li><a href="resource/exercices/clockJS/index.html">Exercice 08 - Horloge en Javascripts</a></li>
+                <li><a href="resource/exercices/FlexboxCheatSheet/index.html">Exercice 09 - Flexbox CheatSheet</a></li>
               </ul>
             </li>
             <li><a class="drop" href="#">Examens</a>
