Ajout lien vers exercice todolist

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ Licence URI: https://www.os-templates.com/template-terms
             </li>
             <li><a class="drop" href="#">Exercices</a>
               <ul>
-                <li><a href="resource/exercices/clockJS/index.html">Exercice 08 - Horloge en Javascripts</a></li>
-                <li><a href="resource/exercices/FlexboxCheatSheet/index.html">Exercice 09 - Flexbox CheatSheet</a></li>
+                <li><a href="resource/exercices/clockJS/index.html">Exercice 07 - Horloge en Javascripts</a></li>
+                <li><a href="resource/exercices/FlexboxCheatSheet/index.html">Exercice 08 - Flexbox CheatSheet</a></li>
+                <li><a href="resource/exercices/todoList/index.html">Exercice 09 - todoList</a></li>
               </ul>
             </li>
             <li><a class="drop" href="#">Examens</a>
