--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Licence URI: https://www.os-templates.com/template-terms
                 <li><a href="resource/exercices/clockJS/index.html">Exercice 07 - Horloge en Javascripts</a></li>
                 <li><a href="resource/exercices/FlexboxCheatSheet/index.html">Exercice 08 - Flexbox CheatSheet</a></li>
                 <li><a href="resource/exercices/todoList/index.html">Exercice 09 - todoList</a></li>
+                <li><a href="resource/exercices/simon/index.html">Exercice 10 - Simon</a></li>
               </ul>
             </li>
             <li><a class="drop" href="#">Examens</a>
