Ajout exercices revision et formatif

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <li class="active"><a href="index.html">Acceuil</a></li>
             <li><a class="drop" href="#">Cohortes</a>
               <ul>
-                <li><a href="resource/Examen1_formatif_Corrige.zip">2021-2022</a></li>
+                <li><a href="">Automne 2021</a></li>
               </ul>
             </li>
             <li><a class="drop" href="#">Exercices</a>
@@ -57,11 +57,13 @@ Licence URI: https://www.os-templates.com/template-terms
                 <li><a href="resource/exercices/FlexboxCheatSheet/index.html">Exercice 08 - Flexbox CheatSheet</a></li>
                 <li><a href="resource/exercices/todoList/index.html">Exercice 09 - todoList</a></li>
                 <li><a href="resource/exercices/simon/index.html">Exercice 10 - Simon</a></li>
+                <li><a href="resource/exercices/revisionExamen2/modification_texte.html">Modification de texte</a></li>
               </ul>
             </li>
             <li><a class="drop" href="#">Examens</a>
               <ul>
                 <li><a href="resource/Examen1_formatif_Corrige.zip" download="Examen 1 - formatif (Corrigé)">Premier formatif corrigé</a></li>
+                <li><a href="resource/exercices/examen2_formatif/index.html" download="Examen 2 - formatif (Corrigé)">Deuxième formatif corrigé</a></li>
               </ul>
             </li>
             <!-- <li><a class="drop" href="#">Pages</a>
@@ -237,6 +239,11 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_quarter">
           <figure><a class="imgover" href="#"><img src="images/demo/300x300.png" alt=""></a>
             <figcaption><strong>D. Doe</strong> <em>Job Title Here</em></figcaption>
+          </figure>
+        </li>
+        <li class="one_quarter">
+          <figure><a class="imgover" href="#"><img src="images/demo/300x300.png" alt=""></a>
+            <figcaption><strong>E. Doe</strong> <em>Job Title Here</em></figcaption>
           </figure>
         </li>
       </ul>
