Corrige erreur lien vers exam2-formatif

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <li><a class="drop" href="#">Examens</a>
               <ul>
                 <li><a href="resource/Examen1_formatif_Corrige.zip" download="Examen 1 - formatif (Corrigé)">Premier formatif corrigé</a></li>
-                <li><a href="resource/exercices/examen2_formatif/index.html" download="Examen 2 - formatif (Corrigé)">Deuxième formatif corrigé</a></li>
+                <li><a href="resource/exercices/examen2_formatif/index.html">Deuxième formatif corrigé</a></li>
               </ul>
             </li>
             <!-- <li><a class="drop" href="#">Pages</a>
