Ajout de l'examen 2

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Licence URI: https://www.os-templates.com/template-terms
               <ul>
                 <li><a href="resource/Examen1_formatif_Corrige.zip" download="Examen 1 - formatif (Corrigé)">Premier formatif corrigé</a></li>
                 <li><a href="resource/exercices/examen2_formatif/index.html">Deuxième formatif corrigé</a></li>
+                <li><a href="resource/examen2/index.html">Examen 2</a></li>
               </ul>
             </li>
             <!-- <li><a class="drop" href="#">Pages</a>
